# clawloop

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .publicpaths  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTACT_VERIFICATION_GUIDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PILOT_CUSTOMER_RESEARCH_SUMMARY.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  __init__.py  architecture.html  docker-compose.yml  mkdocs.yml  playbook.json  proxy.py  proxy_config.py  pyproject.toml  server.py  train.py
.codeboarding/: analysis.json  analysis_manifest.json  codeboarding_version.json  file_coverage.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml  test.yml
adapters/: _car_purple.py  _entropic_purple.py  _entropic_rewards.py  base.py  car.py  openclaw.py
backends/: base.py  harness_learning.py
business/: PILOT_CUSTOMER_RESEARCH_SUMMARY.md
business/gtm/: 2026-03-29-gtm-launch-plan.md
business/intake-forms/: Past answer applications Aganthos.docx  WORKFLOW.txt  intake_form_leads.csv  main.py
business/landingpage/: index.html
business/pitch/: package-lock.json
business/resources/: AGENTS.md  overview-investor.md
business/webpage/: gemini-robot-fix.md
callbacks/: litellm_cb.py
clawloop/: LICENSE  __init__.py  agent.py  cli.py  collector.py  completion.py  config.py  demo_math.py  learner.py  llm.py  proxy.py  proxy_config.py  proxy_session.py  proxy_skills.py  proxy_sse.py  server.py  train.py  wrapper.py
clawloop/adapters/: __init__.py  _car_purple.py  _car_rewards.py  _entropic_purple.py  _entropic_rewards.py  base.py  car.py  entropic.py  openclaw.py  tau2.py
clawloop/archive/: __init__.py  jsonl_store.py  null_store.py  schema.py  store.py
clawloop/backends/: __init__.py  base.py  skyrl.py
clawloop/callbacks/: litellm_cb.py
clawloop/core/: archive_recorder.py  background.py  curator.py  embeddings.py  env.py  episode.py  evolution.py  evolution_log.py  evolver.py  gate.py  layer.py  loop.py  paradigm.py  parse.py  reflector.py  reward.py  runner.py  state.py  transaction.py  types.py
clawloop/environments/: __init__.py  _car_purple.py  (+13 more)
config/: demo_tickets.json  seed_prompt.txt
configs/: car_train.json  entropic_mini.json
core/: __init__.py  background.py  episode.py  evolution.py  evolver.py  layer.py  loop.py  reflector.py  reward.py
docs/: adding-environments.md  cliproxyapi.md  concepts.md  getting-started.md  index.md
enterprise/: __init__.py
enterprise_clawloop/: __init__.py
envs/: harbor.py
evolvers/: __init__.py  local.py
examples/: 2048_tinker_pilot.yaml  README.md  blackjack_plus_2048_tinker_pilot.yaml  blackjack_tinker_pilot.yaml  demo_math.py  openclaw_demo.py  openclaw_demo_remote.py  openclaw_proxy_demo.py  playbook_demo.py  tinker_weight_demo.py  train_runner.py
extractors/: formatting.py
gtm/: 2026-03-29-gtm-launch-plan.md
intake-forms/: README.md  WORKFLOW.txt  aganthos_profile.py  form_answerer.py  intake_form_leads.csv
landingpage/: index.html
layers/: harness.py  weights.py
lfx/: __init__.py  agent.py  cli.py  collector.py  completion.py  learner.py  llm.py  server.py  train.py  wrapper.py
n8n-workflows/: README.md  customer-support.json
pitch/: WORKFLOW.md  deck.html  deck_v2.html  deckv3.html  deckv3_standalone.html  html2pdf.mjs  html2pdf.py  main_pitch.html  main_pitch_standalone.html  package.json  pitch-scripts.md
resources/: AGENTS.md  Aganthos Slides 09032026v2.pptx  agent_environment_tikz_v5.tex  flywheel_ppt_colors.tex
ressources/: AGENTS.md  Medium Article Chon Thang Managing Partner Berkeley Skydeck  agent_environment_tikz_v1.tex  agent_environment_tikz_v2.tex  agent_environment_tikz_v3.tex  agent_environment_tikz_v4.tex  emails and information Skydeck before final 50 min interview  overview-investor.md  overview.md
scripts/: analyze_run.py  audit_public.sh  demo.py  eval_openspiel.py  full_e2e_test.py  run_parallel_pilots.py  run_pilot.py  smoke.sh  smoke_test_proxy.py  sync_public.sh  test_openclaw_learning_loop.py  tinker_preflight.py
static/: clawloop-architecture.html  index.html  lfx-architecture.html
tests/: conftest.py  test_activity_intensity.py  test_agent.py  test_archive_integration.py  test_archive_jsonl_store.py  test_archive_schema.py  test_async_bridge.py  test_attribution.py  test_backends.py  test_background.py  test_car_adapter.py  test_car_purple.py  test_car_rewards.py  test_cli.py  test_cloud_hook.py  test_coherence.py  test_collector.py  test_collector_flush.py  test_completion.py  test_consolidation.py  test_curator.py  test_curator_lightweight.py  test_decay.py  test_demo_math.py  test_dreamer.py  test_e2e_enterpriseops_gym.py  test_e2e_harbor.py  test_embedding_invalidation.py  test_entropic_adapter.py  test_entropic_purple.py  test_entropic_rewards.py  test_env.py  test_episode.py  test_evolution.py  test_evolution_log.py  test_evolver_protocol.py  test_evolver_real_llm.py  test_extractors.py  test_fallback.py  test_gemini_embeddings.py  (+51 more)
utils/: __init__.py
webpage/: README.md  color-demos.html  contact_api.py  gemini-robot-fix.md  index.html
(+263 files in other folders)
