[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawloop"
version = "0.1.0"
description = "ClawLoop — Learning from Experience unified learning API"
requires-python = ">=3.11"
license = "BSL-1.1"
dependencies = [
    "litellm>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
]
car = [
    "starlette>=0.27",
    "uvicorn>=0.20",
    "httpx>=0.24",
]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
    "openinference-semantic-conventions>=0.1.6",
]
n8n = [
    "starlette>=0.27",
    "uvicorn>=0.20",
    "httpx>=0.24",
]
# tau2 = ["tau-bench"]  # deferred — not yet on PyPI

[project.scripts]
clawloop = "clawloop.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["clawloop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
