[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawloop"
version = "0.0.1"
description = "AI agents that learn from experience — observe, learn, improve"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [{name = "Aganthos Inc."}]
readme = "README.md"
keywords = ["ai", "agents", "learning", "llm", "reinforcement-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "litellm>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
]
car = [
    "starlette>=0.27",
    "uvicorn>=0.20",
    "httpx>=0.24",
]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
    "openinference-semantic-conventions>=0.1.6",
]
server = [
    "starlette>=0.27",
    "uvicorn>=0.20",
    "httpx>=0.24",
]
taubench = [
    "tau2 @ git+https://github.com/sierra-research/tau2-bench.git@dev/tau3",
]
[project.scripts]
clawloop = "clawloop.cli:main"
clawloop-server = "clawloop.server:main"

[project.urls]
Homepage = "https://github.com/aganthos/clawloop"
Repository = "https://github.com/aganthos/clawloop"
Issues = "https://github.com/aganthos/clawloop/issues"
Documentation = "https://aganthos.github.io/clawloop"
Website = "https://aganthos.com"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
    "clawloop/",
    "tests/",
    "examples/",
    "LICENSE",
    "README.md",
    "CONTRIBUTING.md",
    "CHANGELOG.md",
]
exclude = [
    "benchmarks/",
    "scripts/",
]

[tool.hatch.build.targets.wheel]
packages = ["clawloop"]

[tool.uv]
python-preference = "only-managed"
constraint-dependencies = [
  "litellm!=1.82.7,!=1.82.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring Docker, network, and API keys",
]
